# multi-agent-test-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_module.py
mate/: __init__.py  agents.py  cli.py  orchestrator.py
tests/: test_orchestrator.py
